--- a/index.html
+++ b/index.html
@@ -124,9 +124,22 @@
           <div
             class="border border-black p-3 mb-2 bg-primary text-white col col-12 col-xl-7"
           >
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Exercitationem cupiditate delectus dolorum quam voluptate incidunt
-            rerum perferendis autem.
+            <div class="row mt-2">
+              <div
+                class="border border-black p-3 mb-2 bg-secondary text-white col col-12 col-md-6 col-lg-6"
+              >
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Exercitationem cupiditate delectus dolorum quam voluptate
+                incidunt rerum perferendis autem.
+              </div>
+              <div
+                class="border border-black p-3 mb-2 bg-secondary text-white col col-12 col-md-6 col-lg-6"
+              >
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Exercitationem cupiditate delectus dolorum quam voluptate
+                incidunt rerum perferendis autem.
+              </div>
+            </div>
           </div>
           <div
             class="border border-black p-3 mb-2 bg-primary text-white col col-12 col-xl-5"
